Fix text wrapping for long links

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,6 +79,7 @@ main {
 
 .notice {
   padding: 0.8rem;
+  overflow-wrap: break-word;
   .media--icon {
     margin-right: 0.8rem;
   }
